--- a/config.yaml
+++ b/config.yaml
@@ -1,46 +1,41 @@
 ---
-title: Your Thesis' Title
+title: {{ project }}
 subtitle: ---
-author: Your Name
+author: {{ name }}
+institute: {{ institute }}
 
 lang: en
 fontsize: 12pt
 documentclass: scrreprt
 top-level-division: chapter
-toc: yes
+toc: true
 toc-depth: 1
-lof: yes
+lof: true
 secnumdepth: 1
 # crossref custumization
 figPrefix: ["Fig.", "Figs."]
 eqnPrefix: ["Eq.", "Eqns."]
 tblPrefix: ["Tbl.", "Tbls."]
 secPrefix: ["Section", "Sections"]
-# TODO: chapter prefix
-autoEqnLabels: yes
-cref: yes
+autoEqnLabels: true
+# citeproc custumization
+cref: true
 bibliography: references.yaml
-# citation-style: path/to/file.csl
 reference-section-title: Bibliography
-header-includes:
-    - \usepackage[onehalfspacing]{setspace}
-    #- \usepackage{chemfig}
+# custum headers
+#header-includes:
+    #- \usepackage[onehalfspacing]{setspace}  # for proofreading
 include-before: |
   Ich erkläre hiermit, dass ich die vorliegende Arbeit selbständig verfasst
   und keine anderen als die angegebenen Quellen und Hilfsmittel verwendet habe.
-  \vspace{2cm}
-  \begin{flushright}
-  \begin{tabular}{lr}
+  \vspace{2cm}\begin{flushright}\begin{tabular}{lr}
       \multicolumn{2}{c}{\rule[0.1cm]{8cm}{0.1pt}}\\
       & Karlsruhe, dd.mm.yyyy\\
-  \end{tabular}
-  \end{flushright}
+  \end{tabular}\end{flushright}
   \vfill
   Genehmigt als Ansichtsexemplar
-  \begin{flushright}
-  \begin{tabular}{lr}
+  \begin{flushright}\begin{tabular}{lr}
       \multicolumn{2}{c}{\rule[0.1cm]{8cm}{0.1pt}}\\
       & Karlsruhe, dd.mm.yyyy\\
-  \end{tabular}
-  \end{flushright}
+  \end{tabular}\end{flushright}
 ---
